# aiagents-stock

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  run.py
.streamlit/: config.toml
docker/: Dockerfile  docker-compose.yml
src/ai/: ai_agents.py  deepseek_client.py  longhubang_agents.py  sector_strategy_agents.py
src/data/: fund_flow_akshare.py  market_sentiment_data.py  sector_strategy_data.py  stock_data.py
src/engines/: longhubang_engine.py  main_force_analysis.py  sector_strategy_engine.py  smart_monitor_engine.py
src/services/: monitor_scheduler.py  monitor_service.py  notification_service.py  portfolio_manager.py  portfolio_scheduler.py  sector_strategy_scheduler.py
src/ui/: config_manager.py  longhubang_ui.py  main_force_history_ui.py  main_force_ui.py  monitor_manager.py  portfolio_ui.py  sector_strategy_ui.py  smart_monitor_ui.py
src/utils/: config.py
