[project]
name = "aiagents-stock"
version = "1.0.0"
description = "AI多智能体股票分析系统 - 基于DeepSeek的中国A股投资分析平台"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "AI Stock Team" }
]
keywords = ["stock", "ai", "analysis", "deepseek", "a-share", "investment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "plotly>=5.15.0",
    "yfinance>=0.2.18",
    "akshare>=1.11.0",
    "tushare>=1.3.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pytz",
    "ta>=0.10.2",
    "reportlab>=4.0.0",
    "peewee>=3.17.0",
    "schedule>=1.2.0",
    "pywencai>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
aiagents-stock = "run:main"

[project.urls]
Homepage = "https://github.com/your-repo/aiagents-stock"
Documentation = "https://github.com/your-repo/aiagents-stock/tree/main/docs"
Repository = "https://github.com/your-repo/aiagents-stock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
